--- a/golance-frontend/index.html
+++ b/golance-frontend/index.html
@@ -7,6 +7,9 @@
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"/>
+    <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
+    
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
