--- a/golance-frontend/index.html
+++ b/golance-frontend/index.html
@@ -9,6 +9,9 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"/>
     <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
     
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
